--- a/src/sass/components/_lightbox.scss
+++ b/src/sass/components/_lightbox.scss
@@ -5,9 +5,6 @@
     width: 100%;
     height: 100%;
     z-index: 2000;
-    @include respond-to(desktop) {
-        backface-visibility: hidden;
-    }
 
     @include respond-to(desktop) {
         margin: 0 auto;
@@ -15,6 +12,7 @@
         max-width: $lightbox-max-width;
         height: auto;
         text-align: left;
+        backface-visibility: hidden;
     }
 
     .lightbox-body {
@@ -35,7 +33,6 @@
             text-align: center;
             position: relative;
             button.close {
-                font-family: $font-family-icons;
                 position: absolute;
                 top: 0px;
                 right: 0px;
@@ -46,6 +43,12 @@
                 margin: 0;
                 color: $color-grey-dark;
                 outline: none;
+
+                svg {
+                    height: 1em;
+                    width: 1em;
+                    fill: $color-grey-dark;
+                }
 
                 &.active {
                     top: 2px;
