--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -95,7 +95,6 @@
     padding: 0;
     position: relative;
     display: inline-block;
-    @include hide-text();
     margin: 2px;
     box-shadow: 0 0 0 2px $btn-icon-color;
     border-radius: 50%;
@@ -107,6 +106,8 @@
     text-decoration: none;
     font-weight: normal;
     font-size: $font-size-base;
+    background: transparent;
+    border: 0;
     line-height: 1;
     height: 2.5em;
     width: 2.5em;
