--- a/src/sass/lib/_scut.scss
+++ b/src/sass/lib/_scut.scss
@@ -1,7 +1,7 @@
 /*
 * Scut, a collection of Sass utilities
 * to ease and improve our implementations of common style-code patterns.
-* v0.10.3
+* v1.0.1
 * Docs at http://davidtheclark.github.io/scut
 */
 
@@ -238,7 +238,7 @@ $scut-rem-base: 16 !default;
 
   // If $off IS NOT a list and $bg is TRUE,
   // assign background-color.
-  @else if $bg and not $off-is-list {
+  @else if $bg and not($off-is-list) {
     background-color: $off;
     $transition-properties: background-color;
   }
@@ -265,7 +265,7 @@ $scut-rem-base: 16 !default;
       background-color: nth($on, 2);
     }
 
-    @else if $bg and not $on-is-list {
+    @else if $bg and not($on-is-list) {
       background-color: $on;
     }
 
@@ -333,9 +333,13 @@ $scut-rem-base: 16 !default;
 }
 @mixin scut-reset-border-box {
   // Make everything a border-box, because why not?
-  *, *:before, *:after {
+  html {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
   }
 }
 
@@ -395,7 +399,6 @@ $scut-rem-base: 16 !default;
     color: inherit;
     font: inherit;
     margin: 0;
-    outline: none;
     padding: 0;
     width: auto;
     -webkit-appearance: none;
@@ -431,7 +434,7 @@ $scut-rem-base: 16 !default;
 }
 
 @mixin scut-reset-figure {
-  // Remove default margins:
+  // Remove default margins.
   figure {
     margin: 0;
   }
@@ -439,34 +442,35 @@ $scut-rem-base: 16 !default;
 
 // Call them all, minus exclusions!
 @mixin scut-reset ($exclude: false) {
-  @if not index($exclude, border-box) {
+  @if not(index($exclude, border-box)) {
     @include scut-reset-border-box;
   }
-  @if not index($exclude, antialias) {
+  @if not(index($exclude, antialias)) {
     @include scut-reset-antialias;
   }
-  @if not index($exclude, semanticize) {
+  @if not(index($exclude, semanticize)) {
     @include scut-reset-semanticize;
   }
-  @if not index($exclude, pointer) {
+  @if not(index($exclude, pointer)) {
     @include scut-reset-pointer;
   }
-  @if not index($exclude, form) {
+  @if not(index($exclude, form)) {
     @include scut-reset-form;
   }
-  @if not index($exclude, button) {
+  @if not(index($exclude, button)) {
     @include scut-reset-button;
   }
-  @if not index($exclude, paragraph) {
+  @if not(index($exclude, paragraph)) {
     @include scut-reset-paragraph;
   }
-  @if not index($exclude, media) {
+  @if not(index($exclude, media)) {
     @include scut-reset-media;
   }
-  @if not index($exclude, figure) {
+  @if not(index($exclude, figure)) {
     @include scut-reset-figure;
   }
 }
+
 @mixin scut-selected (
   $active: false
 ) {
@@ -646,7 +650,7 @@ $scut-rem-base: 16 !default;
 
   $translate-val: null;
 
-  @if not $axis {
+  @if not($axis) {
     $translate-val: translate(-50%, -50%);
   }
   @else if $axis != x {
@@ -780,7 +784,7 @@ $scut-rem-base: 16 !default;
   }
 
   & > li + li:#{$pseudo} {
-    @if not $height {
+    @if not($height) {
       content: $divider;
       display: inline-block;
       @content;
@@ -1099,7 +1103,7 @@ $scut-rem-base: 16 !default;
 
 }
 @mixin scut-vcenter-ib (
-  $inner: ".scut-inner"
+  $inner...
 ) {
 
   // The inner element is vertically centered
@@ -1117,9 +1121,12 @@ $scut-rem-base: 16 !default;
     margin-right: -0.25em;
   }
 
-  & > #{$inner} {
-    display: inline-block;
-    vertical-align: middle;
+  $inner: if(length($inner) == 0, ".scut-inner", $inner);
+  @each $cell-selector in $inner {
+    & > #{$cell-selector} {
+      display: inline-block;
+      vertical-align: middle;
+    }
   }
 
 }
@@ -1137,14 +1144,17 @@ $scut-rem-base: 16 !default;
 
 }
 @mixin scut-vcenter-td (
-  $inner: ".scut-inner"
+  $inner...
 ) {
 
   display: table;
 
-  & > #{$inner} {
-    display: table-cell;
-    vertical-align: middle;
+  $inner: if(length($inner) == 0, ".scut-inner", $inner);
+  @each $cell-selector in $inner {
+    & > #{$cell-selector} {
+      display: table-cell;
+      vertical-align: middle;
+    }
   }
 
 }
@@ -1153,6 +1163,7 @@ $scut-rem-base: 16 !default;
 %scut-vcenter-td {
   @include scut-vcenter-td;
 }
+
 // Depends on scut-center-transform
 
 @mixin scut-vcenter-tt () {
