--- a/src/sass/base/_config.scss
+++ b/src/sass/base/_config.scss
@@ -27,10 +27,16 @@ $color-grey-lighterer:              #f0eff5;
 $color-grey-lightest:               #f9f9f9;
 $color-grey-dark-alpha:             rgba(0, 0, 0, 0.80);
 
-// Layout
+// Breakpoints
 // -------------------------------------------
 
-$respond-size-desktop:              768px;
+$screen-sm-max:             640px;
+$screen-md-min:             641px;
+$screen-md-max:             960px;
+$screen-lg-min:             961px;
+
+// Layout
+// -------------------------------------------
 
 $content-nav-width:                 344px;
 
