--- a/src/sass/components/_labels.scss
+++ b/src/sass/components/_labels.scss
@@ -29,7 +29,7 @@
         fill: $label-primary-color;
     }
 
-    @include respond-to(retina) {
+    @include scut-hd-bp {
         background-size: 3px 3px;
     }
 }
