--- a/src/sass/views/_dialog.scss
+++ b/src/sass/views/_dialog.scss
@@ -1,7 +1,7 @@
 .view-dialog {
     height: auto;
 
-    @include respond-to(desktop) {
+    @include respond-to(md) {
         max-width: 350px;
     }
 
