--- a/src/sass/views/_login.scss
+++ b/src/sass/views/_login.scss
@@ -16,7 +16,7 @@
             width: 320px;
         }
 
-        @include respond-to(desktop) {
+        @include respond-to(md) {
             margin: 115px auto 75px;
         }
     }
