--- a/src/sass/views/_read.scss
+++ b/src/sass/views/_read.scss
@@ -22,7 +22,7 @@
                 height: 0.8em;
                 width: 0.8em;
 
-                @include respond-to(desktop) {
+                @include respond-to(md) {
                     display: none;
                 }
             }
