--- a/src/sass/views/_add-account.scss
+++ b/src/sass/views/_add-account.scss
@@ -32,7 +32,7 @@
                 line-height: 38px;
                 flex-shrink: 0;
 
-                @include respond-to(mobile) {
+                @include respond-to(sm-only) {
                     font-size: $font-size-big;
                 }
             }
@@ -56,7 +56,7 @@
             font-size: 32px;
             line-height: 64px;
 
-            @include respond-to(mobile) {
+            @include respond-to(sm-only) {
                 padding: 30px 0 20px 0;
             }
         }
