--- a/src/sass/views/_write.scss
+++ b/src/sass/views/_write.scss
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
 
-    @include respond-to(desktop) {
+    @include respond-to(md) {
         // this number depends on max-height set on .lightbox
         height: 590px; // magic number
     }
