--- a/src/sass/base/_scaffolding.scss
+++ b/src/sass/base/_scaffolding.scss
@@ -1,5 +1,4 @@
 
-@include scut-reset-border-box;
 @include scut-reset-pointer;
 @include scut-reset-semanticize;
 @include scut-reset-button;
@@ -7,6 +6,7 @@
 *,
 *:before,
 *:after {
+    box-sizing: border-box;
     // remove flickering on item touch selection in ios
     -webkit-tap-highlight-color: transparent !important;
 }
