removed more sass dependencies

--- a/src/sass/base/_config.scss
+++ b/src/sass/base/_config.scss
@@ -1,10 +1,10 @@
 // Typography
 // -------------------------------------------
 $font-size-base:                    16px;
-$font-size-small:                   em(14);
-$font-size-smaller:                 em(12);
-$font-size-big:                     em(18);
-$font-size-bigger:                  em(24);
+$font-size-small:                   scut-em(14);
+$font-size-smaller:                 scut-em(12);
+$font-size-big:                     scut-em(18);
+$font-size-bigger:                  scut-em(24);
 
 $font-family-base:                  "PT Sans", Arial, sans-serif;
 
