--- a/src/sass/base/_scaffolding.scss
+++ b/src/sass/base/_scaffolding.scss
@@ -11,13 +11,13 @@
     -webkit-tap-highlight-color: transparent !important;
 }
 
-// Body reset
+@include scrollbar();
 
+// Body reset
 html {
     font-size: 62.5%;
     height: 100%;
 }
-
 body {
     font-family: $font-family-base;
     font-size: $font-size-base;
@@ -45,10 +45,7 @@ fieldset {
     border: 1px solid $color-grey-lighter;
 }
 
-// Basic layout
+// ngView
 .main-app-view {
     height: 100%;
-
-    // allow text selection
-    user-select: none;
 }
