--- a/src/sass/mixins/_scrollbar.scss
+++ b/src/sass/mixins/_scrollbar.scss
@@ -2,6 +2,7 @@
 // Custom scrollbars in webkit
 // @see http://css-tricks.com/custom-scrollbars-in-webkit/
 
+$scrollbar-width: 10px;
 $scrollbar-themes: (
     base: (
         thumb:          $color-border-light,
