--- a/src/sass/blocks/basics/_buttons.scss
+++ b/src/sass/blocks/basics/_buttons.scss
@@ -5,86 +5,118 @@
 .btn {
     position: relative;
     display: inline-block;
-    padding: $btn-padding-vertical $btn-padding-horizontal;
-    font-size: $btn-font-size;
+    padding: 0.5em 0.7em;
+    font-size: $font-size-big;
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
-    border: 1px solid transparent;
+    border: 0;
     border-radius: 0;
     white-space: nowrap;
     user-select: none;
     background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-    background-color: $btn-back-color;
-    color: $btn-color;
+    background-color: $color-main;
+    color: $color-main-text;
     transition: background-color 0.3s;
     text-decoration: none;
     font-weight: normal;
-    outline: 0;
+    outline: none;
+    min-width: 5em;
 
     svg {
         width: 1em;
         height: 1em;
-        fill: $btn-color;
+        fill: $color-main;
     }
 
     &:hover,
     &:focus {
-        background-color: lighten($btn-back-color, 10%);
+        background-color: lighten($color-main, 10%);
     }
 
-    &:active,
-    &.active {
+    &:active {
         background-image: none;
         box-shadow: none;
         top: 2px;
         right: -2px;
     }
 
-    &.disabled,
+    &--disabled,
     &[disabled],
     &[aria-disabled="true"] {
         cursor: not-allowed;
         pointer-events: none; // Future-proof disabling of clicks
-        color: $btn-disabled-color;
-        background-color: $btn-disabled-back-color;
+        color: $color-white;
+        background-color: $color-grey-lighter;
         background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAJUlEQVQIW2NkQABJIPM5lCvJCGMgC4LYIAkUlTAFMB0gjRQaBQCw8go5lVnl5wAAAABJRU5ErkJggg==);
 
         svg {
-            fill: $btn-disabled-color;
+            fill: $color-white;
         }
 
         @include scut-hd-bp {
             background-size: 3px 3px;
         }
     }
-}
 
-.btn-primary {
-    background-color: $label-primary-back-color;
-    color: $label-primary-color;
-    background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAJUlEQVQIW2NkQABJIPM5lCvJCGMgC4LYIAkUlTAFMB0gjRQaBQCw8go5lVnl5wAAAABJRU5ErkJggg==);
+    // Invalid button state
+    &--invalid {
+        background-color: $color-error;
+        color: $color-error-text;
+        background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAJUlEQVQIW2NkQABJIPM5lCvJCGMgC4LYIAkUlTAFMB0gjRQaBQCw8go5lVnl5wAAAABJRU5ErkJggg==);
 
-    svg {
-        fill: $label-primary-color;
+        svg {
+            fill: $color-error-text;
+        }
+
+        @include scut-hd-bp {
+            background-size: 3px 3px;
+        }
+
+        &:hover,
+        &:focus {
+            background-color: lighten($color-error, 5%);
+        }
     }
 
-    @include scut-hd-bp {
-        background-size: 3px 3px;
+    // Secondary button
+    &--secondary {
+        background-color: $color-grey-input;
+
+        &:hover,
+        &:focus {
+            background-color: lighten($color-grey-input, 10%);
+        }
     }
 
-    &:hover,
-    &:focus {
-        background-color: lighten($label-primary-back-color, 5%);
-    }
-}
+    // Small lightweight button
+    &--light {
+        padding: 0.4em 0.5em;
+        font-size: $font-size-base;
+        border: 1px solid $color-main;
+        background: transparent;
+        color: $color-main;
 
-.btn-alt {
-    background-color: $color-grey-input;
+        svg {
+            fill: $color-main;
+        }
 
-    &:hover,
-    &:focus {
-        background-color: lighten($color-grey-input, 10%);
+        &:hover,
+        &:focus {
+            background-color: rgba($color-main, 0.1);
+        }
+
+        &--disabled,
+        &[disabled],
+        &[aria-disabled="true"] {
+            color: $color-grey;
+            border-color: $color-grey;
+            background: transparent;
+
+            svg {
+                fill: $color-grey;
+            }
+        }
     }
 }
 
@@ -92,11 +124,11 @@
 // -------------------------------------------
 
 .btn-icon {
-    padding: 0;
     position: relative;
     display: inline-block;
     margin: 2px;
-    box-shadow: 0 0 0 2px $btn-icon-color;
+    padding: 0;
+    box-shadow: 0 0 0 2px $color-main;
     border-radius: 50%;
     vertical-align: middle;
     cursor: pointer;
@@ -112,31 +144,33 @@
     height: 2.5em;
     width: 2.5em;
     text-align: center;
+    outline: none;
     -webkit-font-smoothing: antialiased;
+
     @include respond-to(lg) {
         transition: color 0.3s;
         transform: translate3d(0,0,0); // to prevent flickering
     }
-    outline: none;
 
     svg {
         width: 1.2em;
         height: 1.2em;
-        fill: $btn-icon-color;
+        fill: $color-main;
     }
 
-    &.disabled,
+    &--disabled,
     &[disabled],
     &[aria-disabled="true"] {
         cursor: not-allowed;
         pointer-events: none; // Future-proof disabling of clicks
-        color: $btn-icon-disabled-color;
-        box-shadow: 0 0 0 2px $btn-icon-disabled-color;
+        color: $color-grey;
+        box-shadow: 0 0 0 2px $color-grey;
+        svg {
+            fill: $color-grey;
+        }
     }
 
-    &:active,
-    &.active {
-        outline: 0;
+    &:active {
         top: 2px;
         right: -2px;
     }
@@ -153,7 +187,7 @@
         left: -2px;
         padding: 2px;
         z-index: -1;
-        background: $btn-icon-color;
+        background: $color-main;
         @include respond-to(lg) {
             transition: transform 0.3s, opacity 0.4s;
             transform: scale(1.2);
