--- a/src/sass/read-sandbox.scss
+++ b/src/sass/read-sandbox.scss
@@ -2,8 +2,12 @@
 @import "base/config";
 @import "base/fonts";
 
-// Components
-@import "components/scrollbars";
+// Mixins
+
+@import "mixins/responsive";
+@import "mixins/scrollbar";
+
+@include scrollbar();
 
 html {
     // use overflow auto and not scroll otherwise IE shows scrollbars always
