added desktop action bar

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -18,12 +18,10 @@
 // Components
 @import "components/labels";
 @import "components/lightbox";
-@import "components/nav";
 @import "components/dialog";
 @import "components/mail-list";
 @import "components/layout";
 @import "components/popover";
-@import "components/input";
 @import "components/mail-addresses";
 @import "components/spinner";
 @import "components/tags-input";
@@ -47,5 +45,7 @@
 // (BEM-like Naming, see http://cssguidelin.es/#bem-like-naming)
 
 @import "blocks/basics/buttons";
+@import "blocks/basics/form";
 @import "blocks/layout/app";
 @import "blocks/layout/nav";
+@import "blocks/layout/action-bar";
