--- a/src/sass/blocks/basics/_buttons.scss
+++ b/src/sass/blocks/basics/_buttons.scss
@@ -23,10 +23,14 @@
     outline: none;
     min-width: 5em;
 
-    svg {
+    & > svg {
         width: 1em;
         height: 1em;
         fill: $color-main;
+
+        // for better valignment
+        position: relative;
+        top: 0.15em;
     }
 
     &:hover,
@@ -41,7 +45,6 @@
         right: -2px;
     }
 
-    &--disabled,
     &[disabled],
     &[aria-disabled="true"] {
         cursor: not-allowed;
@@ -50,7 +53,7 @@
         background-color: $color-grey-lighter;
         background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAJUlEQVQIW2NkQABJIPM5lCvJCGMgC4LYIAkUlTAFMB0gjRQaBQCw8go5lVnl5wAAAABJRU5ErkJggg==);
 
-        svg {
+        & > svg {
             fill: $color-white;
         }
 
@@ -65,7 +68,7 @@
         color: $color-error-text;
         background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAYAAAAGCAYAAADgzO9IAAAAJUlEQVQIW2NkQABJIPM5lCvJCGMgC4LYIAkUlTAFMB0gjRQaBQCw8go5lVnl5wAAAABJRU5ErkJggg==);
 
-        svg {
+        & > svg {
             fill: $color-error-text;
         }
 
@@ -91,13 +94,14 @@
 
     // Small lightweight button
     &--light {
-        padding: 0.4em 0.5em;
+        height: 2em;
+        padding: 0.3em 0.5em;
         font-size: $font-size-base;
         border: 1px solid $color-main;
         background: transparent;
         color: $color-main;
 
-        svg {
+        & > svg {
             fill: $color-main;
         }
 
@@ -106,21 +110,65 @@
             background-color: rgba($color-main, 0.1);
         }
 
-        &--disabled,
         &[disabled],
         &[aria-disabled="true"] {
             color: $color-grey;
             border-color: $color-grey;
             background: transparent;
 
-            svg {
+            & > svg {
                 fill: $color-grey;
+            }
+        }
+    }
+
+    // Small lightweight dropdown button
+    &--light-dropdown {
+        height: 2em;
+        padding: 0.3em 0.5em;
+        font-size: $font-size-base;
+        border: 1px solid $color-main;
+        background: transparent;
+        color: $color-main;
+        text-align: left;
+        min-width: 0;
+
+        & > svg {
+            fill: $color-main;
+        }
+
+        .btn__dropdown {
+            margin-left: 0.75em;
+            top: 0.2em; // optimized valignment
+        }
+
+        &:hover,
+        &:focus {
+            background-color: rgba($color-main, 0.1);
+        }
+
+        &[disabled],
+        &[aria-disabled="true"] {
+            color: $color-grey;
+            border-color: $color-grey;
+            background: transparent;
+
+            & > svg {
+                fill: $color-grey;
+            }
+        }
+
+        &.btn--active {
+            background-color: $color-main;
+            color: $color-main-text;
+            & > svg {
+                fill: $color-main-text;
             }
         }
     }
 }
 
-// Icon Buttons
+// Icon Button
 // -------------------------------------------
 
 .btn-icon {
@@ -152,7 +200,7 @@
         transform: translate3d(0,0,0); // to prevent flickering
     }
 
-    svg {
+    & > svg {
         width: 1.2em;
         height: 1.2em;
         fill: $color-main;
@@ -165,7 +213,7 @@
         pointer-events: none; // Future-proof disabling of clicks
         color: $color-grey;
         box-shadow: 0 0 0 2px $color-grey;
-        svg {
+        & > svg {
             fill: $color-grey;
         }
     }
@@ -204,5 +252,40 @@
                 opacity: 1;
             }
         }
+    }
+}
+
+// Light icon button without any border
+// -------------------------------------------
+
+.btn-icon-light {
+    position: relative;
+    display: inline-block;
+    background: transparent;
+    border: 0;
+    font-size: $font-size-base;
+    opacity: 0.5;
+    transition: opacity 0.3s;
+
+    &:focus,
+    &:hover {
+        opacity: 1;
+    }
+
+    & > svg {
+        width: 1em;
+        height: 1em;
+        fill: $color-text-light;
+    }
+
+    &--disabled,
+    &[disabled],
+    &[aria-disabled="true"] {
+        display: none;
+    }
+
+    &:active {
+        top: 1px;
+        left: 1px;
     }
 }
