--- a/src/sass/blocks/layout/_nav.scss
+++ b/src/sass/blocks/layout/_nav.scss
@@ -41,13 +41,16 @@
             display: block;
             color: $color-white;
             text-decoration: none;
+            & > svg {
+                fill: $color-white;
+                width: 20px;
+                height: 1em;
+                vertical-align: baseline;
+                margin-right: 5px;
+            }
         }
-        svg {
-            fill: $color-white;
-            width: 20px;
-            height: 1em;
-            vertical-align: baseline;
-            margin-right: 5px;
+        .btn-icon-light {
+            display: none;
         }
 
         &--open {
@@ -70,13 +73,13 @@
                 display: block;
                 color: $color-white;
                 text-decoration: none;
-            }
-            svg {
-                fill: $color-white;
-                width: 20px;
-                height: 1em;
-                vertical-align: baseline;
-                margin-right: 5px;
+                & > svg {
+                    fill: $color-white;
+                    width: 20px;
+                    height: 1em;
+                    vertical-align: baseline;
+                    margin-right: 5px;
+                }
             }
 
             &--open {
@@ -96,7 +99,7 @@
     }
 
     @include respond-to(lg) {
-        padding-top: 27px;
+        padding-top: 27px; // magic number to valign logo with action bar
         background: $color-bg;
         color: $color-text;
 
@@ -117,14 +120,21 @@
             border-top-color: $color-border-light;
         }
         &__folder {
+            position: relative;
             font-size: $font-size-big;
             padding-left: 5px;
             padding-right: 5px;
             a {
                 color: $color-main;
+                & > svg {
+                    fill: $color-main;
+                }
             }
-            svg {
-                fill: $color-main;
+            .btn-icon-light {
+                display: block;
+                position: absolute;
+                right: 0;
+                top: 0.25em;
             }
         }
         &__secondary {
@@ -135,9 +145,9 @@
                 padding-right: 5px;
                 a {
                     color: $color-text-light;
-                }
-                svg {
-                    fill: $color-text-light;
+                    & > svg {
+                        fill: $color-text-light;
+                    }
                 }
             }
         }
