--- a/src/sass/blocks/basics/_form.scss
+++ b/src/sass/blocks/basics/_form.scss
@@ -8,19 +8,19 @@
     // ios
     border-radius: 0;
     -webkit-appearance: none;
-}
 
-:invalid,
-.ng-invalid,
-.input-text-error {
-    border-color: $color-error;
+    &:invalid,
+    &.ng-invalid,
+    &--error {
+        border-color: $color-error;
+    }
 }
 
 .input-error-message {
     margin: 5px 0;
     padding: 0;
     color: $color-error;
-    font-size: em(13);
+    font-size: $font-size-base;
 }
 
 .search {
@@ -30,7 +30,7 @@
         width: 100%;
         padding-left: 1.8em;
     }
-    svg {
+    & > svg {
         position: absolute;
         left: 0.7em;
         fill: $color-grey-medium;
