--- a/src/sass/views/_read.scss
+++ b/src/sass/views/_read.scss
@@ -129,7 +129,7 @@
         text-align: center;
 
         p {
-            color: $label-primary-back-color;
+            color: $color-error;
             margin: 0;
         }
     }
