fix styling of attachment button

--- a/src/sass/blocks/basics/_buttons.scss
+++ b/src/sass/blocks/basics/_buttons.scss
@@ -26,7 +26,7 @@
     & > svg {
         width: 1em;
         height: 1em;
-        fill: $color-main;
+        fill: $color-main-text;
 
         // for better valignment
         position: relative;
