--- a/src/sass/views/_write.scss
+++ b/src/sass/views/_write.scss
@@ -89,6 +89,7 @@
             height: 30px;
             font-size: 1em;
             outline: 0;
+            min-width: 0;
 
             &:active,
             &.active {
