--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -48,3 +48,4 @@
 @import "blocks/layout/app";
 @import "blocks/layout/nav";
 @import "blocks/layout/action-bar";
+@import "blocks/layout/mail-list-wrapper";
