--- a/src/sass/mixins/_responsive.scss
+++ b/src/sass/mixins/_responsive.scss
@@ -5,6 +5,7 @@ $mediaqueries: (
     md:                  "(min-width: #{$screen-md-min})",
     md-only:             "(min-width: #{$screen-md-min}) and (max-width: #{$screen-md-max})",
     lg:                  "(min-width: #{$screen-lg-min})",
+    not-md:              "(max-width: #{$screen-sm-max}), (min-width: #{$screen-lg-min})",
     not-lg:              "(max-width: #{$screen-md-max})"
 );
 
