--- a/src/sass/blocks/basics/_buttons.scss
+++ b/src/sass/blocks/basics/_buttons.scss
@@ -168,6 +168,22 @@
     }
 }
 
+.btn-navicon {
+    background: transparent;
+    border: 0;
+    border-radius: 0;
+    padding: 0;
+    margin: 0;
+    outline: 0;
+
+    & > svg {
+        fill: $color-blue;
+        width: 2em;
+        height: 2em;
+        vertical-align: middle;
+    }
+}
+
 // Icon Button
 // -------------------------------------------
 
