--- a/src/sass/blocks/basics/_spinner.scss
+++ b/src/sass/blocks/basics/_spinner.scss
@@ -5,10 +5,10 @@
     height: 1em;
     width: 1em;
     animation: spinner-rotation .6s linear infinite;
-    border-left: 0.17em solid $color-grey-light;
-    border-right: 0.17em solid $color-grey-light;
-    border-bottom: 0.17em solid $color-grey-light;
-    border-top: 0.17em solid $color-grey;
+    border-left: 0.17em solid rgba($color-black, 0.2);
+    border-right: 0.17em solid rgba($color-black, 0.2);
+    border-bottom: 0.17em solid rgba($color-black, 0.2);
+    border-top: 0.17em solid rgba($color-black, 0.7);
     border-radius: 100%;
 }
 
