--- a/src/sass/blocks/layout/_app.scss
+++ b/src/sass/blocks/layout/_app.scss
@@ -24,6 +24,11 @@
         -webkit-overflow-scrolling: touch;
         @include scrollbar(main);
 
+        // hide scrollbar in webkit
+        &::-webkit-scrollbar {
+            display: none;
+        }
+
         @include respond-to(not-lg) {
             will-change: transform;
             transform: translateX(-100%);
