--- a/src/sass/blocks/basics/_buttons.scss
+++ b/src/sass/blocks/basics/_buttons.scss
@@ -41,8 +41,7 @@
     &:active {
         background-image: none;
         box-shadow: none;
-        top: 2px;
-        right: -2px;
+        transform: translateX(2px) translateY(2px);
     }
 
     &[disabled],
@@ -235,8 +234,7 @@
     }
 
     &:active {
-        top: 2px;
-        right: -2px;
+        transform: translateX(2px) translateY(2px);
     }
 
     &:after {
@@ -278,10 +276,14 @@
     position: relative;
     display: inline-block;
     background: transparent;
+    border-radius: 0;
     border: 0;
+    padding: 0;
+    margin: 0;
     font-size: $font-size-base;
     opacity: 0.5;
     transition: opacity 0.3s;
+    outline: 0;
 
     &:focus,
     &:hover {
@@ -301,7 +303,6 @@
     }
 
     &:active {
-        top: 1px;
-        left: 1px;
+        transform: translateX(1px) translateY(1px);
     }
 }
