--- a/src/sass/blocks/basics/_form.scss
+++ b/src/sass/blocks/basics/_form.scss
@@ -39,3 +39,31 @@
         width: 1em;
     }
 }
+
+.checkbox {
+    input[type="checkbox"] {
+        display: none;
+        &:checked + span svg {
+            opacity: 1;
+            transform: scale(1, 1);
+        }
+    }
+    span {
+        display: inline-block;
+        width: 1em;
+        height: 1em;
+        line-height: 1em;
+        border: 1px solid $color-text-light;
+        text-align: center;
+        svg {
+            display: inline-block;
+            fill: $color-main;
+            height: 90%;
+            width: 90%;
+            opacity: 0;
+            transform: scale(0.5, 0.5);
+            transform-origin: center center;
+            transition: opacity 0.2s, transform 0.2s;
+        }
+    }
+}
