--- a/src/sass/blocks/views/_mail-list.scss
+++ b/src/sass/blocks/views/_mail-list.scss
@@ -1,3 +1,4 @@
+// Container for mail list entries
 .mail-list {
     $padding-horizontal: 15px;
     $padding-vertical: 10px;
@@ -40,7 +41,7 @@
             }
         }
 
-        &--scroll-canvas {
+        &__scroll-canvas {
             flex-grow: 1;
             padding: 0 $padding-horizontal;
             overflow-y: scroll;
@@ -53,6 +54,11 @@
             &::-webkit-scrollbar {
                 display: none;
             }
+        }
+        &__entries {
+            list-style: none;
+            margin: 0;
+            padding: 0;
         }
 
         & > footer {
@@ -119,6 +125,308 @@
             &::-webkit-scrollbar {
                 display: none;
             }
+        }
+        &__entries {
+            display: table; // import for mail list entry desktop layout
+            width: 100%;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+        }
+    }
+}
+
+// Individual mail list entries with several states
+.mail-list-entry {
+    // do not share any common styles between large and other screens
+    // because styling is very different
+
+    @include respond-to(not-lg) {
+        $padding-horizontal: 30px;
+        $padding-vertical: 9px;
+
+        position: relative;
+        display: block;
+        padding: $padding-vertical $padding-horizontal;
+        cursor: pointer;
+        margin-top: 11px;
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            top: -6px;
+            left: 0;
+            right: 0;
+            height: 0;
+            border-top: 1px solid $color-border-light;
+        }
+
+        &:first-child {
+            margin-top: 0;
+            &:before {
+                display: none;
+            }
+        }
+        &:last-child {
+            margin-bottom: 5px;
+        }
+
+        // Flags
+
+        &__flags {
+            position: absolute;
+            top: $padding-vertical;
+            left: 0;
+            list-style: none;
+            margin: 0;
+            padding: 0;
+            width: $padding-horizontal;
+            line-height: 22px; // roughly valign with lines of main content
+            & > li {
+                font-size: 90%;
+                text-align: center;
+                & > svg {
+                    display: inline-block;
+                    vertical-align: middle;
+                    width: 1em;
+                    height: 1em;
+                }
+            }
+        }
+        &__flags-unread {
+            display: none; // hidden in default state
+            &:after {
+                display: inline-block;
+                content: '';
+                width: 1em;
+                height: 1em;
+                border-radius: 50%;
+                background-color: $color-main;
+                vertical-align: middle;
+            }
+        }
+        &__flags-checked {
+            display: none; // feature on touch layout not available for now
+        }
+        &__flags-favorite {
+            display: none; // feature on touch layout not available for now
+        }
+        &__flags-encrypted > svg {
+            fill: $color-text-light;
+            &:first-child {
+                fill: $color-main;
+            }
+        }
+        &__flags-answered > svg {
+            fill: $color-text-light;
+        }
+        &__attachment {
+            display: none; // hidden in default state
+            position: absolute;
+            top: $padding-vertical;
+            right: $padding-vertical;
+            text-align: center;
+            font-size: 90%;
+            & > svg {
+                display: inline-block;
+                vertical-align: middle;
+                width: 1em;
+                height: 1em;
+                fill: $color-text-light;
+            }
+        }
+
+        // Main content
+
+        &__name {
+            @include scut-truncate;
+            color: $color-main;
+            font-size: $font-size-bigger;
+            font-weight: normal;
+            line-height: 1;
+            margin-bottom: 8px;
+        }
+        &__subject {
+            @include scut-truncate;
+            font-size: $font-size-small;
+            line-height: $font-size-small;
+            font-weight: bold;
+            padding-right: 90px; // to make room for time
+            margin-bottom: 8px;
+        }
+        &__time {
+            @include scut-truncate;
+            position: absolute;
+            top: $padding-vertical + $font-size-bigger + 8px;
+            right: $padding-horizontal;
+            width: 80px;
+            color: $color-text-light;
+            font-size: $font-size-smaller;
+            line-height: $font-size-small; // same line height as subject
+            text-align: right;
+        }
+        &__excerpt {
+            color: $color-grey;
+            height: 2 * $line-height-base * 1em;
+            font-size: $font-size-small;
+            overflow: hidden;
+        }
+
+        // Modifiers
+
+        &:hover {
+            background-color: rgba($color-main, 0.15);
+        }
+        &--unread {
+            .mail-list-entry__flags-unread {
+                display: block;
+            }
+        }
+        &--attachment {
+            .mail-list-entry__flags-attachment {
+                display: block;
+            }
+        }
+        &--active,
+        &--active:hover {
+            background-color: $color-main;
+            color: $color-main-text;
+            .mail-list-entry__name,
+            .mail-list-entry__time,
+            .mail-list-entry__excerpt {
+                color: $color-main-text;
+            }
+            .mail-list-entry__flags-unread:after {
+                background-color: $color-main-text;
+            }
+            .mail-list-entry__attachment > svg,
+            .mail-list-entry__flags-encrypted > svg,
+            .mail-list-entry__flags-encrypted > svg:first-child,
+            .mail-list-entry__flags-answered > svg {
+                fill: $color-main-text;
+            }
+        }
+    }
+
+    @include respond-to(lg) {
+        $cell-padding-vertical:         10px;
+        $cell-padding-horizontal:       10px;
+
+        display: table-row;
+        table-layout: fixed;
+        background: mix($color-bg, $color-border-light, 70%);
+        color: $color-grey;
+        cursor: pointer;
+
+        // Flags
+
+        &__flags {
+            display: table-cell;
+            box-sizing: content-box;
+            border-bottom: 1px solid $color-border-light;
+            padding: $cell-padding-vertical $cell-padding-horizontal;
+            list-style: none;
+            width: 8em;
+            white-space: nowrap;
+            & > li {
+                display: inline-block;
+                margin-left: 0.5em;
+                & > svg {
+                    display: inline-block;
+                    vertical-align: middle;
+                    width: 1em;
+                    height: 1em;
+                }
+            }
+        }
+        &__flags-unread {
+            display: none;
+        }
+        &__flags-checked {
+            margin-left: 0 !important;
+            .checkbox {
+                vertical-align: middle;
+            }
+        }
+        &__flags-favorite {
+            & > svg {
+                fill: $color-text-light;
+                &:first-child {
+                    fill: $color-main;
+                }
+            }
+        }
+        &__flags-encrypted > svg {
+            fill: $color-text-light;
+            &:first-child {
+                fill: $color-main;
+            }
+        }
+        &__flags-answered > svg {
+            fill: $color-text-light;
+        }
+        &__attachment {
+            display: table-cell;
+            box-sizing: content-box;
+            border-bottom: 1px solid $color-border-light;
+            padding: $cell-padding-vertical $cell-padding-horizontal;
+            width: 1em;
+            & > svg {
+                visibility: hidden; // hidden in default state
+                display: block;
+                vertical-align: middle;
+                width: 1em;
+                height: 1em;
+                fill: $color-text-light;
+            }
+        }
+
+        // Main content
+
+        &__name {
+            @include scut-truncate;
+            display: table-cell;
+            border-bottom: 1px solid $color-border-light;
+            padding: $cell-padding-vertical $cell-padding-horizontal;
+        }
+        &__subject {
+            @include scut-truncate;
+            display: table-cell;
+            border-bottom: 1px solid $color-border-light;
+            padding: $cell-padding-vertical $cell-padding-horizontal;
+        }
+        &__time {
+            display: table-cell;
+            border-bottom: 1px solid $color-border-light;
+            padding: $cell-padding-vertical $cell-padding-horizontal;
+            width: 1px; // hack to make column as small as possible
+            text-align: right;
+            white-space: nowrap;
+        }
+        &__excerpt {
+            display: none;
+        }
+
+        // Modifiers
+
+        &:hover {
+            background-color: mix($color-bg, $color-main, 85%);
+        }
+        &--unread {
+            background-color: $color-bg;
+            font-weight: bold;
+            .mail-list-entry__name {
+                font-weight: bold;
+            }
+        }
+        &--attachment {
+            .mail-list-entry__attachment > svg {
+                visibility: visible;
+            }
+        }
+        &--checked {
+            background-color: mix($color-bg, $color-main, 85%);
         }
     }
 }
