--- a/src/sass/blocks/layout/_nav.scss
+++ b/src/sass/blocks/layout/_nav.scss
@@ -49,7 +49,7 @@
                 margin-right: 5px;
             }
         }
-        .btn-icon-light {
+        .btn-icon-very-light {
             display: none;
         }
 
@@ -124,7 +124,7 @@
                     fill: $color-main;
                 }
             }
-            .btn-icon-light {
+            .btn-icon-very-light {
                 display: block;
                 position: absolute;
                 right: 0;
