--- a/src/sass/blocks/basics/_buttons.scss
+++ b/src/sass/blocks/basics/_buttons.scss
@@ -281,6 +281,42 @@
     padding: 0;
     margin: 0;
     font-size: $font-size-base;
+    transition: opacity 0.3s;
+    outline: 0;
+
+    & > svg {
+        width: 1.5em;
+        height: 1.5em;
+        fill: $color-main;
+    }
+
+    &--disabled,
+    &[disabled],
+    &[aria-disabled="true"] {
+        cursor: not-allowed;
+        pointer-events: none; // Future-proof disabling of clicks
+        & > svg {
+            fill: $color-text-light;
+        }
+    }
+
+    &:active {
+        transform: translateX(1px) translateY(1px);
+    }
+}
+
+// Very small and light icon button without any border
+// -------------------------------------------
+
+.btn-icon-very-light {
+    position: relative;
+    display: inline-block;
+    background: transparent;
+    border-radius: 0;
+    border: 0;
+    padding: 0;
+    margin: 0;
+    font-size: $font-size-base;
     opacity: 0.5;
     transition: opacity 0.3s;
     outline: 0;
